[gd_scene load_steps=6 format=2]

[ext_resource path="res://textures/arrow.png" type="Texture" id=1]
[ext_resource path="res://textures/icon-trainee.png" type="Texture" id=2]
[ext_resource path="res://resources/tinierBold.tres" type="DynamicFont" id=3]
[ext_resource path="res://office/slimes_wanted.gd" type="Script" id=4]
[ext_resource path="res://resources/label_theme.tres" type="Theme" id=6]

[node name="VBoxContainer" type="VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )

[node name="OfficeAction" type="Button" parent="."]
margin_right = 344.0
margin_bottom = 29.0
toggle_mode = true
text = "Slimes wanted - 2 coins each"
icon = ExtResource( 2 )

[node name="Arrow" type="Sprite" parent="OfficeAction"]
modulate = Color( 0.666667, 0, 1, 1 )
position = Vector2( 419, 15 )
scale = Vector2( 0.6, 0.269123 )
texture = ExtResource( 1 )

[node name="Dialog_VBox" type="VBoxContainer" parent="."]
margin_top = 33.0
margin_right = 344.0
margin_bottom = 113.0

[node name="Title" type="Label" parent="Dialog_VBox"]
margin_right = 344.0
margin_bottom = 18.0
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 3 )
text = "Slimes Wanted - 2 coins each"

[node name="Desc" type="Label" parent="Dialog_VBox"]
margin_top = 22.0
margin_right = 344.0
margin_bottom = 38.0
theme = ExtResource( 6 )
text = "Slimes brought in, increasing road safety"

[node name="Options" type="HBoxContainer" parent="Dialog_VBox"]
margin_top = 42.0
margin_right = 344.0
margin_bottom = 69.0

[node name="TakeDown" type="Button" parent="Dialog_VBox/Options"]
margin_right = 81.0447
margin_bottom = 27.0
text = "Take Down"

[node name="Post" type="Button" parent="Dialog_VBox/Options"]
margin_left = 85.0
margin_right = 125.045
margin_bottom = 27.0
text = "Post"

[node name="HSeparator" type="HSeparator" parent="Dialog_VBox"]
margin_top = 73.0
margin_right = 344.0
margin_bottom = 80.0
custom_constants/separation = 7

[connection signal="toggled" from="OfficeAction" to="." method="_on_OfficeAction_toggled"]
